# woz-vision

./: .gitignore  CMakeLists.txt  README.md  Woz Project Summary.docx
res/: IMG_2242-new.avi  IMG_2270-new.avi
src/: camshiftdemo.cpp  car.cpp  cas.cpp  devInRange.cpp  erodedilate.cpp  fback.cpp  inRange.cpp  lkdemo.cpp  opticalFlowLK.cpp  optical_flow.cpp  optical_flow_farneback.cpp  path_detection.cpp  people.cpp  people_detect.cpp  people_detect.h  peopledetect.cpp  perspectivecorrection.cpp  phone.cpp  promenade.cpp  resize.cpp  testDetectPeople.cpp  tests.cpp  video-dev.cpp  vwrite.cpp  webCamTracker.cpp
training/: casc1.xml  casc2.xml
